--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,11 @@
         android:gravity="center">
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:src="@drawable/jisung_park"
             android:scaleType="centerCrop"
             android:layout_width="80dp"
+            app:civ_border_width="2dp"
             android:layout_height="80dp" />
 
         <TextView
