이미지뷰에 클릭 이벤트 부여

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
 
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgProfile"
             android:src="@drawable/jisung_park"
             android:scaleType="centerCrop"
             android:layout_width="80dp"
