--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,9 +8,9 @@
     android:gravity="center"
     tools:context=".SplashActivity">
 
-    <ImageView
+    <com.airbnb.lottie.LottieAnimationView
         android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@mipmap/ic_launcher" />
+        app:lottie_rawRes="@raw/pride_animation"
+        android:layout_height="120dp" />
 
 </LinearLayout>
