자동 재생 / 반복 재생 속성 설정

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -11,6 +11,8 @@
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="120dp"
         app:lottie_rawRes="@raw/pride_animation"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
         android:layout_height="120dp" />
 
 </LinearLayout>
